[package]
name = "epigenetic_rust"
version = "0.1.0"
authors = ["Diego S. <cuquiwi@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.31.0"
rand = "0.8.5"
regex = "1.5.5"
plotters = "0.3.5"
rayon = "1.6.1"
indicatif = "0.17.7"
clap = { version = "4.0.27", features = ["derive"] }